# discord_ec2_control

./: .gitignore  bot.py  pyproject.toml  run_control.sh
