[tool.poetry]
name = "dicord_ec2"
version = "0.1.0"
description = ""
authors = ["Fill This Field <fill.this@field.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
discord = "^2.3.2"
boto3 = "^1.34.49"
config = "^0.5.1"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
